#1016 - updated for NodeJS v0.10.x

--- a/ha.conf
+++ b/ha.conf
@@ -5,6 +5,10 @@ start on runlevel [23]
 stop on runlevel [06]
 
 respawn
+
 script
-  sudo ha 2>&1 > /var/log/ha.log
+  sleep 10
+  cd /srv/ha
+  nave use 0.10.21 /srv/mrg/ha.js
 end script
+
